# Generated by Django 4.2.7 on 2025-04-01 12:43

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion
import uuid


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('courses', '0001_initial'),
        ('students', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='AttendanceSession',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('start_time', models.DateTimeField(auto_now_add=True, verbose_name='开始时间')),
                ('end_time', models.DateTimeField(blank=True, null=True, verbose_name='结束时间')),
                ('status', models.CharField(choices=[('active', '进行中'), ('closed', '已关闭')], default='active', max_length=10, verbose_name='状态')),
                ('course', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='attendance_sessions', to='courses.course')),
                ('created_by', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='created_sessions', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': '考勤会话',
                'verbose_name_plural': '考勤会话',
                'ordering': ['-start_time'],
            },
        ),
        migrations.CreateModel(
            name='WaitingQueue',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('join_time', models.DateTimeField(auto_now_add=True, verbose_name='加入时间')),
                ('estimated_wait_time', models.IntegerField(default=0, verbose_name='预计等待时间(分钟)')),
                ('is_active', models.BooleanField(default=True, verbose_name='是否在队列中')),
                ('session', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='waiting_queue', to='attendance.attendancesession')),
                ('student', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='waiting_records', to='students.student')),
            ],
            options={
                'verbose_name': '等待队列',
                'verbose_name_plural': '等待队列',
                'ordering': ['join_time'],
            },
        ),
        migrations.CreateModel(
            name='QRCode',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('uuid', models.UUIDField(default=uuid.uuid4, editable=False, verbose_name='唯一标识')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='创建时间')),
                ('expires_at', models.DateTimeField(verbose_name='过期时间')),
                ('qr_code_image', models.ImageField(blank=True, null=True, upload_to='qrcodes/', verbose_name='二维码图片')),
                ('course', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='qrcodes', to='courses.course')),
            ],
            options={
                'verbose_name': '二维码',
                'verbose_name_plural': '二维码',
                'ordering': ['-created_at'],
            },
        ),
        migrations.AddField(
            model_name='attendancesession',
            name='qrcode',
            field=models.OneToOneField(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='session', to='attendance.qrcode'),
        ),
        migrations.AddField(
            model_name='attendancesession',
            name='schedule',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='attendance_sessions', to='courses.courseschedule'),
        ),
        migrations.CreateModel(
            name='AttendanceRecord',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('check_in_time', models.DateTimeField(auto_now_add=True, verbose_name='签到时间')),
                ('check_out_time', models.DateTimeField(blank=True, null=True, verbose_name='签退时间')),
                ('status', models.CharField(choices=[('checked_in', '已签到'), ('checked_out', '已签退')], default='checked_in', max_length=20, verbose_name='状态')),
                ('duration', models.DurationField(blank=True, null=True, verbose_name='学习时长')),
                ('notes', models.TextField(blank=True, verbose_name='备注')),
                ('piano', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='attendance_records', to='courses.piano')),
                ('session', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='records', to='attendance.attendancesession')),
                ('student', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='attendance_records', to='students.student')),
            ],
            options={
                'verbose_name': '考勤记录',
                'verbose_name_plural': '考勤记录',
                'ordering': ['-check_in_time'],
                'unique_together': {('session', 'student')},
            },
        ),
    ]
